# fw-xbot

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  build-binary-and-upload.sh  build-binary-docker.sh  build-binary.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
boards/XCORE/: STM32H723xG_ITCM64k.ld  board.c  board_ex.c  board_ex.h  board_utils.cpp  board_utils.hpp  hal_flash_device.c  hal_flash_device.h  mcuconf.h
boards/XCORE/cfg/: board.chcfg
cfg/: chconf.h  etl_profile.h  halconf.h  lfs_config.h  lwipopts.h  mongoose_config.h
cmake/: gcc-arm-none-eabi.cmake
ext/: CMakeLists.txt
ext/ChibiOS_21.11.3/: CMakeLists.txt
ext/ChibiOS_21.11.3/ext/SEGGER/: SEGGER_SYSVIEW_Int.h
ext/ChibiOS_21.11.3/ext/SEGGER/Syscalls/: SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
ext/ChibiOS_21.11.3/ext/lwip/src/api/: api_msg.c  tcpip.c
ext/ChibiOS_21.11.3/os/hal/ports/STM32/LLD/I2Cv3/: hal_i2c_lld.c
ext/ChibiOS_21.11.3/os/hal/ports/STM32/STM32H7xx/: stm32_dmamux.h
ext/ChibiOS_21.11.3/os/various/lwip_bindings/arch/: cc.h
ext/ChibiOS_21.11.3/os/various/segger_bindings/SYSTEMVIEW/: SEGGER_SYSVIEW_ChibiOS.c  SEGGER_SYSVIEW_ChibiOS.h
ext/LSM6DS3TR-C-PID/: CMakeLists.txt
mongoose/: mongoose_fs.c  mongoose_glue.c  mongoose_glue.h  mongoose_impl.c  mongoose_wizard.json
portable/xbot/: Io.cpp  mutex.cpp  packet.cpp  queue.cpp  socket.cpp  system.cpp  thread.cpp
portable/xbot/include/xbot/: function_impl.hpp  mutex_impl.hpp  packet_impl.hpp  queue_impl.hpp  thread_impl.hpp
robots/: CMakeLists.txt
robots/include/: robot.hpp  xbot_robot.hpp
robots/src/: robot.cpp  xbot_robot.cpp
services/: diff_drive_service.json  imu_service.json  input_service.json  power_service.json  service_ids.h
src/: api.cpp  api.hpp  boot_service_discovery.cpp  boot_service_discovery.hpp  globals.cpp  globals.hpp  heartbeat.c  heartbeat.h  id_eeprom.c  id_eeprom.h  json_stream.cpp  json_stream.hpp  main.cpp  services.cpp  services.hpp  status_led.c  status_led.h
src/debug/: debug_tcp_interface.cpp  debug_tcp_interface.hpp  debug_udp_interface.cpp  debug_udp_interface.hpp  debuggable_driver.cpp  debuggable_driver.hpp
src/drivers/charger/: charger.hpp
src/drivers/charger/bq_2579/: bq_2579.cpp  bq_2579.hpp
src/drivers/input/: gpio_input_driver.cpp  gpio_input_driver.hpp  input_driver.cpp  input_driver.hpp  simulated_input_driver.cpp  simulated_input_driver.hpp
src/drivers/motor/: motor_driver.hpp
src/drivers/motor/pwm/: pwm_motor_driver.cpp  pwm_motor_driver.hpp
src/filesystem/: file.cpp  file.hpp  filesystem.cpp  filesystem.hpp
src/services/: service_ext.hpp
src/services/diff_drive_service/: diff_drive_service.cpp  diff_drive_service.hpp
src/services/emergency_service/: emergency_service.cpp  emergency_service.hpp
src/services/imu_service/: imu_service.cpp  imu_service.hpp
src/services/input_service/: input_service.cpp  input_service.hpp
src/services/power_service/: power_service.cpp  power_service.hpp
